# hyper-webserver

./: Cargo.toml  README.md
src/: endpoint.rs  main.rs  service.rs
templates/: 404.html  index.html
