[package]
name = "webserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "runtime", "tcp", "server"]}
path-tree = "0.1.12"
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "net", "macros", "sync", "signal"]}
tracing-futures = { version = "0.2", features = ["tokio"]}
handlebars = "4.0"

rhai ={ version = "0.20", features = ["sync", "serde"]}
